finished kinda overflow issues

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,9 @@
-
 body, html {
     height: 100%;
     padding: 0;
     margin: 0;
   }
-
-
-
+  
 #container{
     height: 100%;
     display: grid;
@@ -48,8 +45,6 @@ body, html {
     border-radius: 100%; 
     overflow: hidden; 
     display: flex; 
-    align-items: center; 
-    justify-content: center;
     grid-column: 5/6; 
 }
 
@@ -134,16 +129,16 @@ button {
 #main{
     background-color:#e1e7f0 ;
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: 3fr 1fr;
 }
 
 .project-container{
     display: grid;
     padding: 0px 10px 0px 20px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px 1fr 1fr 1fr 50px;
-    gap: 20px
+    grid-template-rows: 50px 1fr 1fr 1fr;
+    gap: 20px;
+    border: 1px solid red;
 }
 
 .project-card{
@@ -154,17 +149,41 @@ button {
 }
 
 .announcement-card{
+    display: grid;
+    grid-template-rows: 1fr 2px 1fr 2px 1fr;
     margin: 20px 0px 0px 0px;
     font-size: smaller;
     grid-row: 2/3;
     display: grid;
     background-color: white;
     border-radius: 9px;
-    padding: 20px;
+    padding: 10px 30px;
+
+
+}
+
+.announcement-line{
+    background-color: #d1d1d1;
 }
 
 .trending-card{
+    box-sizing: border-box;
+    display: grid;
+    grid-template-rows: repeat(8,1fr);
+    grid-template-columns: 1fr 4fr;
+    background-color: white;
+    border-radius: 9px;
+    justify-items: center;
+    align-items: center;
 }
+
+
+.profile-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .project-text{
     padding: 10px 30px 50px 20px;
